# ASDR

./: LICENSE  README.md
Backend/Arduino/libraries/SerialCommandServer/: serial_command_server.cpp  serial_command_server.hpp
Backend/Arduino/serial/: LIS3MDL.h  LIS3MDL.hpp  LSM6DSL.h  LSM6DSL.hpp  berry_imu.cpp  berry_imu.hpp  pwm.cpp  pwm.hpp  rotary_encoder.cpp  rotary_encoder.hpp  serial.ino  serial_command_server.hpp  stepper_motor.cpp  stepper_motor.hpp
Backend/Arduino/serial_berry_imu_uvc_light/: berry_imu.cpp  berry_imu.hpp  serial_berry_imu_uvc_light.ino
Backend/Arduino/serial_rotary_encoder_stepper_motor/: rotary_encoder.hpp  serial_rotary_encoder_stepper_motor.ino  stepper_motor.hpp
Backend/ROS/config/: mobile_base_controller.yaml  mobile_hardware_controller.yaml
Backend/ROS/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Backend/ROS/devel/include/asdr/: get_state.h  get_stateRequest.h  get_stateResponse.h  set_state.h  set_stateRequest.h  set_stateResponse.h  set_velocity.h  set_velocityRequest.h  set_velocityResponse.h
Backend/ROS/devel/include/coverage_path_planner/: make_plan.h  make_planRequest.h  make_planResponse.h
Backend/ROS/devel/include/discovery/: discover.h  discoverRequest.h  discoverResponse.h
Backend/ROS/devel/include/rotary_encoder/: get_rotary_encoder.h  get_rotary_encoderRequest.h  get_rotary_encoderResponse.h
Backend/ROS/devel/include/serial_command_client/: send_command.h  send_commandRequest.h  send_commandResponse.h
Backend/ROS/devel/include/stepper_motor/: set_stepper_motor.h  set_stepper_motorRequest.h  set_stepper_motorResponse.h
Backend/ROS/devel/include/uvc_light/: set_uvc_light.h  set_uvc_lightRequest.h  set_uvc_lightResponse.h
Backend/ROS/devel/lib/asdr/: asdr_node
Backend/ROS/devel/lib/berry_imu/: berry_imu_node
Backend/ROS/devel/lib/coverage_path_planner/: coverage_path_planner_node
Backend/ROS/devel/lib/discovery/: discovery_node
Backend/ROS/devel/lib/mobile_base/: mobile_base_node
Backend/ROS/devel/lib/pkgconfig/: asdr.pc  berry_imu.pc  coverage_path_planner.pc  discovery.pc  mobile_base.pc  rest.pc  rotary_encoder.pc  serial_command_client.pc  stepper_motor.pc  uvc_light.pc
Backend/ROS/devel/lib/rest/: rest_node
Backend/ROS/devel/lib/rotary_encoder/: rotary_encoder_node
Backend/ROS/devel/lib/serial_command_client/: serial_command_client_node
Backend/ROS/devel/lib/stepper_motor/: stepper_motor_node
Backend/ROS/devel/lib/uvc_light/: uvc_light_node
Backend/ROS/devel/share/asdr/cmake/: asdr-msg-extras.cmake  asdr-msg-paths.cmake  asdrConfig.cmake
Backend/ROS/devel/share/berry_imu/cmake/: berry_imu-msg-paths.cmake  berry_imuConfig.cmake
Backend/ROS/devel/share/coverage_path_planner/cmake/: coverage_path_planner-msg-extras.cmake  coverage_path_planner-msg-paths.cmake  coverage_path_plannerConfig.cmake
Backend/ROS/devel/share/discovery/cmake/: discovery-msg-paths.cmake  discoveryConfig.cmake
Backend/ROS/devel/share/mobile_base/cmake/: mobile_base-msg-paths.cmake  mobile_baseConfig.cmake
Backend/ROS/devel/share/rest/cmake/: rest-msg-paths.cmake  restConfig.cmake
Backend/ROS/devel/share/rotary_encoder/cmake/: rotary_encoder-msg-paths.cmake  rotary_encoderConfig.cmake
Backend/ROS/devel/share/stepper_motor/cmake/: stepper_motor-msg-paths.cmake  (+1 more)
Backend/ROS/inc/: serial_commands.hpp
Backend/ROS/launch/: asdr.launch
Backend/ROS/src/: CMakeLists.txt
Backend/ROS/src/a_star/: CMakeLists.txt  package.xml
Backend/ROS/src/a_star/src/: a_star.cpp  a_star.hpp  a_star_node.cpp  a_star_node.hpp
Backend/ROS/src/a_star/srv/: a_star.srv
Backend/ROS/src/asdr/: CMakeLists.txt  package.xml
Backend/ROS/src/asdr/src/: asdr.cpp  asdr.hpp  asdr_node.cpp  asdr_node.hpp  finite_state_machine.cpp  finite_state_machine.hpp  ros_launch_manager.hpp
Backend/ROS/src/asdr/srv/: get_image.srv  get_state.srv
Backend/ROS/src/berry_imu/: CMakeLists.txt  package.xml
Backend/ROS/src/berry_imu/src/: berry_imu_node.cpp  berry_imu_node.hpp
Backend/ROS/src/coverage/: CMakeLists.txt  package.xml
Backend/ROS/src/coverage/src/: coverage_node.cpp  coverage_node.hpp  mandoline.cpp  mandoline.hpp
Backend/ROS/src/coverage/srv/: coverage.srv
Backend/ROS/src/coverage_path_planner/: CMakeLists.txt
Backend/ROS/src/coverage_path_planner/src/: coverage_path_planner_node.cpp  coverage_path_planner_node.hpp  mandoline.cpp  mandoline.hpp
Backend/ROS/src/coverage_path_planner/srv/: make_plan.srv
Backend/ROS/src/discovery/: CMakeLists.txt  package.xml
Backend/ROS/src/discovery/src/: discovery.cpp  discovery.hpp  discovery_node.cpp  discovery_node.hpp
Backend/ROS/src/discovery/srv/: discover.srv  discovery.srv
Backend/ROS/src/mobile_base/: CMakeLists.txt
Backend/ROS/src/mobile_base/src/: mobile_base_node.cpp  mobile_base_node.hpp  pid.cpp  pid.hpp
Backend/ROS/src/mobile_hardware/: CMakeLists.txt  package.xml
Backend/ROS/src/mobile_hardware/src/: mobile_hardware_node.cpp  mobile_hardware_node.hpp
Backend/ROS/src/rest/: CMakeLists.txt  package.xml
Backend/ROS/src/rest/src/: rest_node.cpp  rest_node.hpp
Backend/ROS/src/rotary_encoder/: CMakeLists.txt  package.xml
Backend/ROS/src/rotary_encoder/src/: rotary_encoder_node.cpp  rotary_encoder_node.hpp
Backend/ROS/src/rotary_encoder/srv/: get_rotary_encoder.srv
Backend/ROS/src/serial_command_client/: CMakeLists.txt  package.xml
Backend/ROS/src/serial_command_client/src/: serial_command_client.cpp  serial_command_client.hpp  serial_command_client_node.cpp  serial_command_client_node.hpp
Backend/ROS/src/serial_command_client/srv/: send_command.srv
Backend/ROS/src/stepper_motor/: CMakeLists.txt  package.xml
Backend/ROS/src/stepper_motor/src/: stepper_motor_node.cpp  stepper_motor_node.hpp
Backend/ROS/src/stepper_motor/srv/: set_stepper_motor.srv
Backend/ROS/src/uvc_light/: CMakeLists.txt  package.xml
Backend/ROS/src/uvc_light/src/: uvc_light_node.cpp  uvc_light_node.hpp
Backend/ROS/src/uvc_light/srv/: set_uvc_light.srv
Documents/: ASDR.drawio.xml  UVC_Robot_IEEE_Poster.pptx
Frontend/: index.html  index.js  joystick.js
(+87 files in other folders)
