<?xml version="1.0"?>
<package format="2">
  <name>asdr</name>
  <version>0.0.0</version>
  <description>The ASDR package</description>

  <maintainer email="casey.sanchez.94@gmail.com">Casey Sanchez</maintainer>

  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>action_lib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>uvc_light</build_depend>
  <build_depend>coverage</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>action_lib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>uvc_light</exec_depend>
  <exec_depend>coverage</exec_depend>

  <export>
  </export>
</package>
